<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_uvms_description</name>
  <version>0.0.1</version>
  <description>Custom UVMS description combining BlueROV2 Heavy Reach and Reach Alpha 5 using an Angler-style mount.</description>
  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>blue_description</exec_depend>
  <exec_depend>reach_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
