<?xml version="1.0"?>
<package format="3">
  <name>my_uvms_drivers</name>
  <version>0.0.1</version>
  <description>Low-level ROS 2 wrappers for BlueROV body velocity references and Reach Alpha 5 joint position commands.</description>
  <maintainer email="user@example.com">OpenAI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
